// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input disabled 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 10px;
  border: none;
  box-shadow: none;
  font-family: primary;
  display: block;
  font-size: 14px;
  height: 36px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  outline: none;
  background-color: inputBackground;
}

.c1::-webkit-input-placeholder {
  color: inputPlaceholderColor;
}

.c1::-moz-placeholder {
  color: inputPlaceholderColor;
}

.c1:-ms-input-placeholder {
  color: inputPlaceholderColor;
}

.c1::placeholder {
  color: inputPlaceholderColor;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={true}
    type="text"
  />
</div>
`;

exports[`Input placeholder 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 10px;
  border: none;
  box-shadow: none;
  font-family: primary;
  display: block;
  font-size: 14px;
  height: 36px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  outline: none;
  background-color: inputBackground;
}

.c1::-webkit-input-placeholder {
  color: inputPlaceholderColor;
}

.c1::-moz-placeholder {
  color: inputPlaceholderColor;
}

.c1:-ms-input-placeholder {
  color: inputPlaceholderColor;
}

.c1::placeholder {
  color: inputPlaceholderColor;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    placeholder="test"
    type="text"
  />
</div>
`;

exports[`Input renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
}

.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  border-radius: 10px;
  border: none;
  box-shadow: none;
  font-family: primary;
  display: block;
  font-size: 14px;
  height: 36px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 11px;
  padding-bottom: 11px;
  outline: none;
  background-color: inputBackground;
}

.c1::-webkit-input-placeholder {
  color: inputPlaceholderColor;
}

.c1::-moz-placeholder {
  color: inputPlaceholderColor;
}

.c1:-ms-input-placeholder {
  color: inputPlaceholderColor;
}

.c1::placeholder {
  color: inputPlaceholderColor;
}

<div
  className="c0"
>
  <input
    className="c1"
    disabled={false}
    type="text"
  />
</div>
`;
